test/sema/negative/movesema/struct_move_2.impala
struct Pair {
    x1: ~int,
    x2: int
}

fn f() -> () {
    let p1 = Pair { x1: ~4, x2: 8 };
    let p2 = p1;
    let p3 = p1;
}
